<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Ваша погода</string>

    <string name="today">Сегодня</string>
    <string name="forecast">Прогноз</string>
    <string name="cities">Города</string>
    <string name="addCity">Добавить город</string>
    <string name="noMatch">Город не найден</string>

    <string name="wind">Ветер</string>
    <string name="windSpeed">%1$.2f м/c</string>
    <string name="degreeLabel">"Угол ветра "</string>
    <string name="degree">%1$d°</string>
    <string name="tempMaxMin">%1$.0f° / %2$.0f°</string>
    <string name="feelsLike">"Ощущается как "</string>
    <string name="tempWithCelsius">%1$.0f°C</string>
    <string name="tempWithoutCelsius">%1$.0f°</string>
    <string name="precipitation">Осадки</string>
    <string name="humidity">Влажность</string>
    <string name="visibility">Видимость</string>
    <string name="cloudiness">Облачность</string>
    <string name="withPercent">%1$d%%</string>

    <string name="details">Детали</string>
    <string name="visibilityMeters">%1$d м</string>
    <string name="visibilityKilometers">%1$.1f км</string>

    <string name="deleteWarning">Нельзя удалить единственный сохраненный город</string>
    <string name="cityDownload">Переход к городу %1$s</string>
</resources>